parser.output
Grammar

    0 $accept: input $end

    1 input: ε
    2      | input line

    3 line: NEWLINE
    4     | expr NEWLINE

    5 expr: INTEGER
    6     | expr '+' expr
    7     | expr '-' expr
    8     | expr '*' expr
    9     | expr '/' expr
   10     | '(' expr ')'
   11     | '-' expr


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 10
    ')' (41) 10
    '*' (42) 8
    '+' (43) 6
    '-' (45) 7 11
    '/' (47) 9
    error (256)
    INTEGER <val> (258) 5
    NEWLINE (259) 3 4
    UMINUS (260)


Nonterminals, with rules where they appear

    $accept (12)
        on left: 0
    input (13)
        on left: 1 2
        on right: 0 2
    line (14)
        on left: 3 4
        on right: 2
    expr <val> (15)
        on left: 5 6 7 8 9 10 11
        on right: 4 6 7 8 9 10 11


State 0

    0 $accept: • input $end

    $default  reduce using rule 1 (input)

    input  go to state 1


State 1

    0 $accept: input • $end
    2 input: input • line

    $end     shift, and go to state 2
    INTEGER  shift, and go to state 3
    NEWLINE  shift, and go to state 4
    '-'      shift, and go to state 5
    '('      shift, and go to state 6

    line  go to state 7
    expr  go to state 8


State 2

    0 $accept: input $end •

    $default  accept


State 3

    5 expr: INTEGER •

    $default  reduce using rule 5 (expr)


State 4

    3 line: NEWLINE •

    $default  reduce using rule 3 (line)


State 5

   11 expr: '-' • expr

    INTEGER  shift, and go to state 3
    '-'      shift, and go to state 5
    '('      shift, and go to state 6

    expr  go to state 9


State 6

   10 expr: '(' • expr ')'

    INTEGER  shift, and go to state 3
    '-'      shift, and go to state 5
    '('      shift, and go to state 6

    expr  go to state 10


State 7

    2 input: input line •

    $default  reduce using rule 2 (input)


State 8

    4 line: expr • NEWLINE
    6 expr: expr • '+' expr
    7     | expr • '-' expr
    8     | expr • '*' expr
    9     | expr • '/' expr

    NEWLINE  shift, and go to state 11
    '+'      shift, and go to state 12
    '-'      shift, and go to state 13
    '*'      shift, and go to state 14
    '/'      shift, and go to state 15


State 9

    6 expr: expr • '+' expr
    7     | expr • '-' expr
    8     | expr • '*' expr
    9     | expr • '/' expr
   11     | '-' expr •

    $default  reduce using rule 11 (expr)


State 10

    6 expr: expr • '+' expr
    7     | expr • '-' expr
    8     | expr • '*' expr
    9     | expr • '/' expr
   10     | '(' expr • ')'

    '+'  shift, and go to state 12
    '-'  shift, and go to state 13
    '*'  shift, and go to state 14
    '/'  shift, and go to state 15
    ')'  shift, and go to state 16


State 11

    4 line: expr NEWLINE •

    $default  reduce using rule 4 (line)


State 12

    6 expr: expr '+' • expr

    INTEGER  shift, and go to state 3
    '-'      shift, and go to state 5
    '('      shift, and go to state 6

    expr  go to state 17


State 13

    7 expr: expr '-' • expr

    INTEGER  shift, and go to state 3
    '-'      shift, and go to state 5
    '('      shift, and go to state 6

    expr  go to state 18


State 14

    8 expr: expr '*' • expr

    INTEGER  shift, and go to state 3
    '-'      shift, and go to state 5
    '('      shift, and go to state 6

    expr  go to state 19


State 15

    9 expr: expr '/' • expr

    INTEGER  shift, and go to state 3
    '-'      shift, and go to state 5
    '('      shift, and go to state 6

    expr  go to state 20


State 16

   10 expr: '(' expr ')' •

    $default  reduce using rule 10 (expr)


State 17

    6 expr: expr • '+' expr
    6     | expr '+' expr •
    7     | expr • '-' expr
    8     | expr • '*' expr
    9     | expr • '/' expr

    '*'  shift, and go to state 14
    '/'  shift, and go to state 15

    $default  reduce using rule 6 (expr)


State 18

    6 expr: expr • '+' expr
    7     | expr • '-' expr
    7     | expr '-' expr •
    8     | expr • '*' expr
    9     | expr • '/' expr

    '*'  shift, and go to state 14
    '/'  shift, and go to state 15

    $default  reduce using rule 7 (expr)


State 19

    6 expr: expr • '+' expr
    7     | expr • '-' expr
    8     | expr • '*' expr
    8     | expr '*' expr •
    9     | expr • '/' expr

    $default  reduce using rule 8 (expr)


State 20

    6 expr: expr • '+' expr
    7     | expr • '-' expr
    8     | expr • '*' expr
    9     | expr • '/' expr
    9     | expr '/' expr •

    $default  reduce using rule 9 (expr)
